--- a/index.html
+++ b/index.html
@@ -4,30 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./scss/main.css">
-  <title>Document</title>
+  <title>Ghrepo</title>
 </head>
-<body>
+<body class="body">
   <header class="header">
     <a class="header__logo" href="#">GHREPO</a>
   </header>
 
   <main class="main">
-    <form class="form" action="">
+    <form id="form" class="form" action="">
       <p class="form__title">Login</p>
       <div class="form__group">
         <div class="form__element">
-          <input class="form__input" type="text" placeholder="Username" required>
-          <svg class="form__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M332.64 64.58C313.18 43.57 286 32 256 32c-30.16 0-57.43 11.5-76.8 32.38-19.58 21.11-29.12 49.8-26.88 80.78C156.76 206.28 203.27 256 256 256s99.16-49.71 103.67-110.82c2.27-30.7-7.33-59.33-27.03-80.6zM432 480H80a31 31 0 01-24.2-11.13c-6.5-7.77-9.12-18.38-7.18-29.11C57.06 392.94 83.4 353.61 124.8 326c36.78-24.51 83.37-38 131.2-38s94.42 13.5 131.2 38c41.4 27.6 67.74 66.93 76.18 113.75 1.94 10.73-.68 21.34-7.18 29.11A31 31 0 01432 480z"/></svg>
+          <input id="form__username" class="form__input form__username" type="text" placeholder="Username" required>
+          <ion-icon class="form__icon" name="person"></ion-icon>
         </div>
         <div class="form__element">
-          <input class="form__input" id="myPassword" type="password" placeholder="Password" required>
-          <svg class="form__icon" onclick="showPassword()" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M368 192h-16v-80a96 96 0 10-192 0v80h-16a64.07 64.07 0 00-64 64v176a64.07 64.07 0 0064 64h224a64.07 64.07 0 0064-64V256a64.07 64.07 0 00-64-64zm-48 0H192v-80a64 64 0 11128 0z"/></svg>
+          <input id="form__password" class="form__input form__password" id="myPassword" type="password" placeholder="Password" required>
+          <ion-icon class="form__icon form__icon--secondary" onclick="showPassword()" name="eye-off"></ion-icon>
         </div>
       </div>
-      <button class="button" type="submit">Login</button>
+      <button type="button" class="button" onclick="isCorrectData()">Login</button>
     </form>
   </main>
 
   <script src="./script.js"></script>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
